--- a/kt-react/src/app/App.css
+++ b/kt-react/src/app/App.css
@@ -2,8 +2,8 @@ body {
   text-align: center;
 }
 
-header {
-  background-color: #000;
+.App-header {
+  background-color: #2C374C;
   height: 160px;
   padding: 20px;
   color: white;
@@ -15,4 +15,9 @@ header {
 
 .App-ticker {
   font-size: medium;
+}
+
+.App-h2 {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
 }
